--- a/index.html
+++ b/index.html
@@ -66,6 +66,37 @@
 
         </div>
 
+        <div class="section-3">
+
+            <div class="quote-container">
+                <div class="paragraph">
+                    <p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space,
+                        or maybe people will actually read it. Who knows? All I know is that it actually looks nice.
+                    </p>
+                </div>
+                <div class="name">
+                    <p>- Thor, thunder axe superhero</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="section-4">
+
+            <div class="contact-container">
+                <div class="contact">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="contact-button">Sign Up</div>
+            </div>
+
+        </div>
+
+        <div class="footer">
+            <p>copyright @ the odin project 2021</p>
+        </div>
+
     </div>
     
 </body>
